--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.18",
     "axios": "^1.4.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
+    "vue-grid-layout": "^2.4.0",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
